--- a/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
@@ -1,33 +1,80 @@
-﻿@model DReporting.Models.HomeVM
+﻿@model HomeVM
 
 @{
     ViewBag.Title = "Reporting";
 }
 
-<h2>Actions</h2>
-<a target="_blank" href="/Reporting/Design/Create">Create Report</a>
-<hr />
-
-@if (Model.Reports != null)
-{
-    <h2>Reports</h2>
-    <ul>
-        @foreach (var item in Model.Reports)
-        {
-            <li>@item.Key</li>
-        }
-    </ul>
-    <hr />
+@section scripts {
+    <script type="text/javascript">
+        $(function () {
+            $('a[data-action="delete"]').click(function () {
+                var reportName = $(this).data('reportname');
+                if (!confirm('Are you sure to delete report "' + reportName + '" ?')) {
+                    return false;
+                }
+            });
+        });
+    </script>
 }
 
-@if (Model.DataSources != null)
-{
-    <h2>Data Sources</h2>
-    <ul>
-        @foreach (var item in Model.DataSources)
-        {
-            <li>@item.Key</li>
-        }
-    </ul>
-    <hr />
-}
+<div class="body-content">
+
+    <div class="table-responsive">
+        <h2>Reports</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>ID</td>
+                    <td></td>
+                </tr>
+            </thead>
+            @if (Model.Reports != null)
+            {
+                <tbody>
+                @foreach (var item in Model.Reports)
+                {
+                    <tr>
+                        <td><a href="@Url.Action("Index", "Design", new { Area = Consts.AreaName, ReportId = item.Key })" data-action="edit">@item.Value.DisplayName</a></td>
+                        <td>@item.Key</td>
+                        <td><a href="@Url.Action("Delete", "Home", new { Area = Consts.AreaName, ReportId = item.Key })" data-action="delete" data-reportname="@item.Value.DisplayName">Delete</a></td>
+                    </tr>
+                }
+                </tbody>
+            }
+            <tfoot>
+                <tr>
+                    <td colspan="3"><a href="@Url.Action("Create", "Design", new { Area = Consts.AreaName })" data-action="create">Create New</a></td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+
+    <div class="table-responsive">
+        <h2>Data Sources</h2>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <td>Name</td>
+                </tr>
+            </thead>
+            @if (Model.DataSources != null)
+            {
+                <tbody>
+                @foreach (var item in Model.DataSources)
+                {
+                    <tr>
+                        <td>@item.Key</td>
+                    </tr>
+                }
+                </tbody>
+            }
+            <tfoot>
+                <tr>
+                    <td></td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+
+</div>
