--- a/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
@@ -11,6 +11,7 @@
     <title>@ViewBag.Title</title>
     <script type="text/javascript" src="@Url.Content("~/bundles/js/reporting")"></script>
     @RenderSection("scripts", required: false)
+    <link type="text/css" rel="stylesheet" href="@Url.Content("~/bundles/css/reporting")" />
     @RenderSection("styles", required: false)
 </head>
 <body>
