--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -1,9 +1,9 @@
-﻿@model DReporting.Models.ViewerVM
+﻿@model ViewerVM
 
 @Html.DevExpress().DocumentViewer(settings =>
 {
     settings.Name = "documentViewer1";
     settings.Report = Model.Report;
-    settings.CallbackRouteValues = new { Area = "Reporting", Controller = "Preview", Action = "Callback", ReportId = Model.ReportId };
-    settings.ExportRouteValues = new { Area = "Reporting", Controller = "Preview", Action = "Export", ReportId = Model.ReportId };
+    settings.CallbackRouteValues = new { Area = Consts.AreaName, Controller = "Preview", Action = "Callback", ReportId = Model.ReportId };
+    settings.ExportRouteValues = new { Area = Consts.AreaName, Controller = "Preview", Action = "Export", ReportId = Model.ReportId };
 }).GetHtml()
