--- a/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/BaseLayout.cshtml
@@ -15,7 +15,7 @@
     @RenderSection("styles", required: false)
 </head>
 <body>
-    <div>
+    <div class="body-content">
         @RenderBody()
         @RenderSection("body", required: false)
     </div>
