new code struct of DReporting project

--- a/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
@@ -51,18 +51,18 @@
                     <td>@(Model.Categories.Where(x => x.CategoryID.Equals(item.CategoryID, StringComparison.InvariantCultureIgnoreCase)).Select(x=>x.CategoryName).FirstOrDefault())</td>
                     <td>@item.CreationTime</td>
                     <td>@item.LastUpdateTime</td>
-                    <td><a href="@Url.Action("CopyReport", "Home", new { Area = Consts.AreaName, ReportID = item.ReportID })" data-action="copyreport">Copy</a></td>
-                    <td><a href="@Url.Action("DeleteReport", "Home", new { Area = Consts.AreaName, ReportID = item.ReportID })" data-action="deletereport" data-reportname="@item.ReportName">Delete</a></td>
-                    <td><a href="@Url.Action("EditReport", "Home", new { Area = Consts.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="editreport">Edit</a></td>
-                    <td><a href="@Url.Action("Index", "Design", new { Area = Consts.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="design">Design</a></td>
-                    <td><a href="@Url.Action("Index", "Preview", new { Area = Consts.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="preview">Preview</a></td>
+                    <td><a href="@Url.Action("CopyReport", "Home", new { Area = Contextual.AreaName, ReportID = item.ReportID })" data-action="copyreport">Copy</a></td>
+                    <td><a href="@Url.Action("DeleteReport", "Home", new { Area = Contextual.AreaName, ReportID = item.ReportID })" data-action="deletereport" data-reportname="@item.ReportName">Delete</a></td>
+                    <td><a href="@Url.Action("EditReport", "Home", new { Area = Contextual.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="editreport">Edit</a></td>
+                    <td><a href="@Url.Action("Index", "Design", new { Area = Contextual.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="design">Design</a></td>
+                    <td><a href="@Url.Action("Index", "Preview", new { Area = Contextual.AreaName, ReportID = item.ReportID, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="preview">Preview</a></td>
                 </tr>
             }
             </tbody>
         }
         <tfoot>
             <tr>
-                <td colspan="10"><a href="@Url.Action("Create", "Design", new { Area = Consts.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="createreport">Create Report</a></td>
+                <td colspan="10"><a href="@Url.Action("Create", "Design", new { Area = Contextual.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="createreport">Create Report</a></td>
             </tr>
         </tfoot>
     </table>
@@ -85,15 +85,15 @@
             {
                 <tr>
                     <td>@item.CategoryName</td>
-                    <td><a href="@Url.Action("EditCategory", "Home", new { Area = Consts.AreaName, CategoryID = item.CategoryID, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="editcategory">Edit</a></td>
-                    <td><a href="@Url.Action("DeleteCategory", "Home", new { Area = Consts.AreaName, CategoryID = item.CategoryID })" data-action="deletecategory" data-categoryname="@item.CategoryName">Delete</a></td>
+                    <td><a href="@Url.Action("EditCategory", "Home", new { Area = Contextual.AreaName, CategoryID = item.CategoryID, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="editcategory">Edit</a></td>
+                    <td><a href="@Url.Action("DeleteCategory", "Home", new { Area = Contextual.AreaName, CategoryID = item.CategoryID })" data-action="deletecategory" data-categoryname="@item.CategoryName">Delete</a></td>
                 </tr>
             }
             </tbody>
         }
         <tfoot>
             <tr>
-                <td colspan="3"><a href="@Url.Action("CreateCategory", "Home", new { Area = Consts.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = Consts.AreaName }) })" data-action="createcategory">Create Category</a></td>
+                <td colspan="3"><a href="@Url.Action("CreateCategory", "Home", new { Area = Contextual.AreaName, ReturnUrl = Url.Action("Index", "Home", new { Area = Contextual.AreaName }) })" data-action="createcategory">Create Category</a></td>
             </tr>
         </tfoot>
     </table>
