--- a/DReporting.Web/Areas/Reporting/Views/Home/EditReport.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/EditReport.cshtml
@@ -8,7 +8,7 @@
 <h3>Edit Report - @Model.ReportName</h3>
 <hr />
 
-<form method="post" action="@Url.Action("SaveReport", "Home", new { Area = Consts.AreaName })">
+<form method="post" action="@Url.Action("SaveReport", "Home", new { Area = Contextual.AreaName })">
     @{var returnUrl = System.Web.HttpContext.Current.Request.QueryString["ReturnUrl"];}
     <input type="hidden" name="ReturnUrl" value="@returnUrl" />
     <input type="hidden" name="ReportID" value="@Model.ReportID" />
