--- a/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CategoryVM
 
-<form method="post" action="@Url.Action("SaveCategory", "Home", new { Area = Consts.AreaName })">
+<form method="post" action="@Url.Action("SaveCategory", "Home", new { Area = Contextual.AreaName })">
     @{var returnUrl = System.Web.HttpContext.Current.Request.QueryString["ReturnUrl"];}
     <input type="hidden" name="ReturnUrl" value="@returnUrl" />
     <input type="hidden" name="CategoryID" value="@Model.CategoryID" />
