--- a/DReporting.Web/Areas/Reporting/Views/Home/EditReport.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/EditReport.cshtml
@@ -39,7 +39,7 @@
                                 <option value="">Choose ...</option>
                                 @foreach (var item in categories)
                                 {
-                                    <option value="@item.CategoryID" @if (item.CategoryID == Model.CategoryID){ @Html.Raw("selected=\"selected\"") }>@item.CategoryName</option>
+                                    <option value="@item.CategoryID" @if (item.CategoryID == Model.CategoryID) { @Html.Raw("selected=\"selected\"")  }>@item.CategoryName</option>
                                 }
                             </select>
                         </div>
@@ -49,7 +49,9 @@
                     <div class="col-md-12">
                         <label class="control-label col-md-4"></label>
                         <div class="col-md-8">
-                            <input type="submit" value="Save" />
+                            <button type="submit" class="btn">Save</button>
+                            @if (!string.IsNullOrEmpty(returnUrl))
+                            { <button type="button" class="btn" data-action="cancel" data-href="@returnUrl">Cancel</button>}
                         </div>
                     </div>
                 </div>
