--- a/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Category.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CategoryVM
 
 <form method="post" action="@Url.Action("SaveCategory", "Home", new { Area = Contextual.AreaName })">
-    @{var returnUrl = System.Web.HttpContext.Current.Request.QueryString["ReturnUrl"];}
+    @{var returnUrl = ViewContext.RequestContext.HttpContext.Request.QueryString["ReturnUrl"];}
     <input type="hidden" name="ReturnUrl" value="@returnUrl" />
     <input type="hidden" name="CategoryID" value="@Model.CategoryID" />
     <div class="row" style="width: 500px;">
