--- a/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
             {
                 <tr>
                     <td>@item.DataSourceName</td>
-                    <td>@item.DataSourceId</td>
+                    <td>@item.DataSourceID</td>
                 </tr>
             }
             </tbody>
