--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -3,7 +3,23 @@
 @Html.DevExpress().DocumentViewer(settings =>
 {
     settings.Name = "documentViewer1";
+
     settings.Report = Model.XtraReport;
-    settings.CallbackRouteValues = new { Area = Contextual.AreaName, Controller = "Preview", Action = "Callback", ReportID = Model.ReportID };
-    settings.ExportRouteValues = new { Area = Contextual.AreaName, Controller = "Preview", Action = "Export", ReportID = Model.ReportID };
+
+    settings.CallbackRouteValues = new
+    {
+        Area = Contextual.AreaName,
+        Controller = "Preview",
+        Action = "Callback",
+        ReportID = Model.ReportID
+    };
+
+    settings.ExportRouteValues = new
+    {
+        Area = Contextual.AreaName,
+        Controller = "Preview",
+        Action = "Export",
+        ReportID = Model.ReportID
+    };
+
 }).GetHtml()
