object data source

--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -22,4 +22,17 @@
         ReportID = Model.ReportID
     };
 
+    //settings.CacheReportDocument
+    
+    //settings.RestoreReportDocumentFromCache
+    
+    //protected void ASPxDocumentViewer1_CacheReportDocument(object sender, DevExpress.XtraReports.Web.CacheReportDocumentEventArgs e) {
+    //    Page.Session["report"] = e.SaveDocumentToMemoryStream();
+    //}
+
+    //protected void ASPxDocumentViewer1_RestoreReportDocumentFromCache(object sender, DevExpress.XtraReports.Web.RestoreReportDocumentFromCacheEventArgs e) {
+    //    Stream stream = Page.Session["report"] as Stream;
+    //    if (stream != null) { e.RestoreDocumentFromStream(stream); }
+    //}
+
 }).GetHtml()
