--- a/DReporting.Web/Areas/Reporting/Views/Shared/Designer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Designer.cshtml
@@ -8,7 +8,7 @@
 
     settings.SaveCallbackRouteValues = new
     {
-        Area = Contextual.AreaName,
+        Area = ReportContext.AreaName,
         Controller = "Design",
         Action = "Save",
         ReportID = Model.ReportID,
