--- a/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/Shared/Viewer.cshtml
@@ -8,7 +8,7 @@
 
     settings.CallbackRouteValues = new
     {
-        Area = Contextual.AreaName,
+        Area = ReportContext.AreaName,
         Controller = "Preview",
         Action = "Callback",
         ReportID = Model.ReportID
@@ -16,7 +16,7 @@
 
     settings.ExportRouteValues = new
     {
-        Area = Contextual.AreaName,
+        Area = ReportContext.AreaName,
         Controller = "Preview",
         Action = "Export",
         ReportID = Model.ReportID
