--- a/DReporting.Web/Areas/Reporting/Views/_ViewStart.cshtml
+++ b/DReporting.Web/Areas/Reporting/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = string.Format("~/Areas/{0}/Views/Shared/BaseLayout.cshtml", Contextual.AreaName);
+    Layout = string.Format("~/Areas/{0}/Views/Shared/BaseLayout.cshtml", ReportContext.AreaName);
 }
